--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evrythng-cli",
+  "name": "@chris-lewis/evrythng-cli",
   "version": "1.12.0",
   "description": "Extensible command line interface for the EVRYTHNG API.",
   "main": "./src/main.js",
@@ -14,9 +14,9 @@
   "bin": {
     "evrythng": "bin/cli.js"
   },
-  "author": "EVRYTHNG",
+  "author": "Chris Lewis",
   "dependencies": {
-    "evrythng": "^5.9.3",
+    "evrythng": "^5.10.1",
     "evrythng-swagger": "^1.0.0",
     "json-schema-ref-parser": "^5.0.3",
     "jsonschema": "^1.2.4",
@@ -42,6 +42,7 @@
     "rules": {
       "no-console": 0,
       "global-require": 0,
+      "no-await-in-loop": 0,
       "no-param-reassign": [
         2,
         {
